[package]
name = "persistentcache_procmacro"
version = "0.0.2"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Procedural macro for persistently caching functions (dependency of persistentcache crate)"
documentation = "https://stefan-k.github.io/persistentcache-rs/persistentcache/"
homepage = "https://github.com/stefan-k/persistentcache-rs"
repository = "https://github.com/stefan-k/persistentcache-rs"
readme = "README.md"
keywords = ["persistent", "caching", "science", "HPC", "memoization"]
categories = ["caching", "science"]
license-file = "LICENSE-APACHE"

[lib]
proc-macro = true

[dependencies]
synom = "0.11.3"
futures-await-quote = "0.4"
proc-macro2 = { version = "0.1", features = ["unstable"] }
lazy_static = "1.0.0"
bincode = "1.0.0"

[dependencies.futures-await-syn]
version = "0.12"
features = ["full", "fold", "parsing", "printing", "extra-traits"]
default-features = false

[badges]
travis-ci = { repository = "stefan-k/persistentcache-rs", branch = "master" }
